# mercury-exchange

./: .gitignore  CMakeLists.txt  README.md
app/: application.cpp  application.hpp  main.cpp
benchmark/: benchmark.cpp
core/config/: constants.hpp
core/time/: clock.hpp
core/types/: clock.hpp  constants.hpp  enums.hpp  hash.hpp  ids.hpp  numeric_types.hpp  order.hpp  symbol.hpp  trade.hpp
exchange/events/: execution_report.hpp  market_snapshot.hpp  order_result.hpp
exchange/gateway/: gateway.cpp  gateway.hpp
exchange/matching/: matching_engine.cpp  matching_engine.hpp
exchange/orderbook/: book_order.hpp  limit_level.hpp  order_book.cpp  order_book.hpp
exchange/risk/: risk_engine.cpp  risk_engine.hpp
include/: lock_free_queue.hpp  order_book.hpp  types.hpp
infrastructure/logging/: trade_logger.hpp
infrastructure/memory/: object_pool.hpp
infrastructure/threading/: engine_thread.cpp  engine_thread.hpp  lock_free_queue.hpp
market/: market_publisher.hpp
src/: main.cpp  order_book.cpp
tests/: CMakeLists.txt  gateway_test.cpp  matching_engine_test.cpp  order_book_test.cpp  risk_engine_test.cpp
ui/: dashboard.cpp  dashboard.hpp
